changement de l'implémentation html

--- a/testbootstrap.html
+++ b/testbootstrap.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body>
+
 <head>
 <meta charset="utf-8"/>
 	<title>Wild Socks</title>
@@ -8,8 +8,9 @@
 <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
-
+<body>
 	<nav class="navbar navbar-default">
   		<div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -84,7 +85,7 @@
 	</div>
 	
 <!-- Thumbnail row -->
-
+  <div class="row">
      <div class="col-xs-12 col-md-3" data-toggle="modal" data-target="#MyModal1">
     		<a href="#" class="thumbnail">
       			<img src="image1.jpg" alt="...">
@@ -284,7 +285,6 @@
   		</div><!-- /.modal-dialog -->
 	</div><!-- /.modal -->
 
-</body>
 
 <footer>
 	<ul class="nav nav-pills">
@@ -300,7 +300,9 @@
 	</ul>
 </footer>
 
+</body>
 
 
 
 </html>
+Contact GitHub API Training Shop Blog About
